# ikup

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run-screenshot-tests.sh  st-testing-tweaks.patch
.github/workflows/: run-screenshot-tests.yml  run-tests.yml
data/: cli-tests.reference
data/cli-test-references/: test_assign_id_upload.reference  test_basics.reference  test_cache_basic.reference  test_cache_check.reference  test_cache_cleanup.reference  test_cache_column.reference  test_cache_concurrent.reference  test_cache_max_bytes.reference  test_cleanup.reference  test_concurrent_file.reference  test_concurrent_mixed.reference  test_concurrent_mixed_noconcurrent.reference  test_concurrent_quality_uploads.reference  test_concurrent_stalled.reference  test_concurrent_stream.reference  test_display.reference  test_fallback_dimensions.reference  test_force_id.reference  test_formulas_basic.reference  test_formulas_errors.reference  test_formulas_multiple_images.reference  test_id_space.reference  test_id_subspace.reference  test_mark_uploaded.reference  test_position.reference  (+17 more)
ikup/: __init__.py  cli.py  conversion_cache.py  formula.py  graphics_command.py  graphics_terminal.py  id_manager.py  ikup_terminal.py  image_optimizer.py  place_specification.py  placeholder.py  terminal_detection.py  utils.py
test_scripts/: compare-cli-test.sh  debug-terminal-worker.sh  debug-terminal.sh  postprocess-cli-typescript.sh  run-cli-tests.sh  run-screenshot-tests.sh  vimdiff-cli-test.sh
tests/: cli.py  test_formula.py  test_id_manager.py  test_output_comparison.py  utils.py
tupimage/: __init__.py  cli.py  graphics_command.py  graphics_terminal.py  id_manager.py  placeholder.py  terminal_detection.py  tupimage_terminal.py  utils.py
(+47 files in other folders)
