[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tupimage"
description = "A tool for displaying images in the terminal using the kitty graphics protocol."
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "Pillow",
    "platformdirs",
    "toml",
]

[project.optional-dependencies]
test = ["pytest", "numpy"]

[project.scripts]
tupimage = "tupimage.cli:main"

[tool.hatch.version]
path = "tupimage/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
