[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ikup"
description = "A tool for displaying images in the terminal using the kitty graphics protocol."
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "Pillow",
    "platformdirs",
    "psutil",
    "toml",
]

[project.optional-dependencies]
test = ["pytest", "numpy"]

[project.scripts]
ikup = "ikup.cli:main"

[tool.hatch.version]
path = "ikup/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
